<resources>
    <string name="app_name">TesoemCheckPoint_ISC</string>
    <string name="splashtext">TESOEM CHECK POINT</string>
    <string name="tesoemcheck">TESOEM CHECK POINT</string>
    <string name="soydocente">Soy docente</string>
    <string name="soyalumno">Soy alumno</string>
    <string name="iniciadocente">Iniciar session docente</string>
    <string name="datosldocente">Pon tus datos abajo</string>
    <string name="iniciaalumno">Acceder Alumno</string>
    <string name="datosalumno">Inserta los datos que proporciono el docente</string>
    <string name="scorreo">Correo electronico</string>
    <string name="scontrasena">Contraseña</string>
    <string name="iniciasession">Iniciar session</string>
    <string name="aunnoreg">¿Aun no se ha registrado?  <clickable><font color='#FFFFFF'>Registrarse</font></clickable> </string>
    <string name="registrarse">Registrarse</string>
    <string name="regdocente">Registrar docente</string>
    <string name="confcontra">Confirmar contraseña</string>
    <string name="rnombre">Nombre</string>
    <string name="rnombrecomple">Nombre Completo</string>
    <string name="logout">Cerrar session</string>
    <string name="mostrarQR">Mostrar QR</string>
    <string name="fRegAlum">Registrar Alumno</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="arrow_description">Va a clase</string>
    <string name="clases">Clases</string>
    <string name="iniciar_sesion_de_asistencia">Iniciar Sesion de asistencia</string>
    <string name="mostrar_c_digo_qr">Mostrar Código QR</string>
    <string name="editar_clase">Editar Clase</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="eliminar_clase">Eliminar clase</string>
    <string name="nuevo_nombre_de_la_clase_hint">Nuevo nombre de la clase</string>
    <string name="olvidaste_tu_contrase">¿Olvidaste tu contraseña?</string>


</resources>