<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/editClassLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <!-- Título -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="44sp"
        android:textStyle="bold"
        android:text="@string/editar_clase"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@android:color/black"
        android:layout_weight="0" />

    <!-- Contenido -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <!-- CardView para contener el formulario de edición -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:elevation="4dp"
            android:padding="16dp">

            <!-- Formulario de edición -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editClassNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nuevo_nombre_de_la_clase_hint"
                    android:padding="16dp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- Botones de acción -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/saveClassButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guardar_cambios"
                android:backgroundTint="@color/TesoVerde"
                android:textColor="@android:color/white"
                android:padding="16dp" />

            <Button
                android:id="@+id/deleteClassButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eliminar_clase"
                android:layout_marginTop="16dp"
                android:backgroundTint="#EC4343"
                android:textColor="@android:color/white"
                android:padding="16dp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>