<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:clipToOutline="true"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logoTeso"
        android:layout_width="338dp"
        android:layout_height="405dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="0"
        android:clipToOutline="true"
        android:scaleX="1.6"
        android:scaleY="1.6"
        app:srcCompat="@drawable/tesochecklogotrans" />

    <TextView
        android:id="@+id/tesoem_chec"
        android:layout_width="match_parent"
        android:layout_height="121dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/sora_semibold"
        android:gravity="center_horizontal|top"
        android:text="@string/tesoemcheck"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="32sp"
        android:textStyle="bold"
        app:lineHeight="40dp" />

    <Button
        android:id="@+id/mButtonDocente"
        android:layout_width="291dp"
        android:layout_height="55dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/TesoAzul"
        android:fontFamily="@font/ubuntu"
        android:onClick="onDocenteClick"
        android:text="@string/soydocente"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:cornerRadius="15dp" />

    <Button
        android:id="@+id/mButtonAlumno"
        android:layout_width="291dp"
        android:layout_height="55dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/TesoVerde2"
        android:fontFamily="@font/ubuntu"
        android:onClick="onAlumnoClick"
        android:text="@string/soyalumno"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:cornerRadius="15dp" />

    <View
        android:id="@+id/linea"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/linea" />

</LinearLayout>