<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

  <!-- CardView para contener la información de la clase -->
  <androidx.cardview.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:elevation="4dp"
      android:padding="16dp">

    <!-- Información de la clase -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

      <TextView
          android:id="@+id/classNameTextView"
          android:layout_width="328dp"
          android:layout_height="wrap_content"
          android:textSize="38sp"
          tools:text="Class Name"
          android:textColor="@android:color/black"
          android:fontFamily="sans-serif-medium"/>

      <TextView
          android:id="@+id/membersCountTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:textSize="18sp"
          tools:text="Members Count: 0" />

      <TextView
          android:id="@+id/adminIdTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:textSize="18sp"
          tools:text="Admin ID: admin123" />

    </LinearLayout>

  </androidx.cardview.widget.CardView>

  <!-- Botones de acción -->
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_marginTop="16dp">

    <Button
        android:id="@+id/editarClaseButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editar_clase"
        android:backgroundTint="@color/TesoAzul"
        android:textColor="@android:color/white"
        android:padding="16dp" />

    <Button
        android:id="@+id/showQRCodeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mostrar_c_digo_qr"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/TesoVerde2"
        android:textColor="@android:color/white"
        android:padding="16dp" />

    <Button
        android:id="@+id/startAttendanceButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sesion_de_asistencia"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/TesoVerdeClaro"
        android:textColor="@android:color/white"
        android:padding="16dp" />

  </LinearLayout>

  <!-- RecyclerView para mostrar la lista de alumnos -->
  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/alumnosRecyclerView"
      android:layout_width="match_parent"
      android:layout_height="338dp"
      android:layout_marginTop="16dp"
      android:scrollbars="vertical" />

</LinearLayout>